Changes in version 0.2.2
------------------------

* Renamed classes for generating random values from various probability
  distributions.  Now called "generators" rather than "sequences" in order to
  avoid confusion with mathematical sequences.

* Changed terminology for different fitness scoring schemes to be consistent
  with the literature (what was called 'normalised fitness' is now called
  'natural fitness').

* Refactored fitness-proportionate selection strategies.

* Fixed tournament selection bug.

* Moved the compound evolutionary operators (SplitEvolution and
  EvolutionPipeline) introduced in the previous release into the operators
  package.

* Introduced an IdentityOperator for use with SplitEvolution to enable some
  candidates to be preserved unchanged (this is different from elitism
  because it does not depend on fitness).


Changes in version 0.2.1
------------------------

* Reworked evolutionary operators to allow more flexibility.  Specifically,
  evolution can now be split into separate streams, which enables common
  genetic programming techniques to be used.

* Simplified the use of generics within the API.

* Fixed bug with pre-seeding populations.


Changes in version 0.2
----------------------

* Added support for concurrent fitness evaluations to take advantage of
  multi-core and multi-processor machines.

* Modified the way elitism is configured (the number of candidates to preserve
  is now specifed as an argument to the evolve method of the EvolutionEngine.

* Converted the Travelling Salesman example program into an applet that allows
  parameters to be tweaked and performance to be compared to a brute force
  implementation.

* Fixed RNG seeding to work in an untrusted applet environment (previously
  SecurityExceptions were thrown when attempting to access resources for
  seeding).